# Task-Week-3

./: Cargo.toml
src/: cron_job.rs  data_fetcher.rs  main.rs
src/api/: depth_history.rs  earnings.rs  mod.rs  runepool.rs  swaps.rs
src/db/: connection.rs  insert_depth.rs  insert_earnings.rs  insert_pools.rs  insert_runepool.rs  insert_swap.rs  mod.rs
src/models/: depth_history.rs  earnings_history.rs  mod.rs  pools_history.rs  runepool_history.rs  swaps_history.rs
src/services/: fetch_depth.rs  fetch_earnings.rs  fetch_runepool.rs  fetch_swaps.rs  mod.rs
